--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <h1 class="actual">$149.99</h1>
           <span class="discount">$169.99</span>
         </div>
-        <button class="add-to-cart">
+        <button type="button" class="add-to-cart">
           <i class="fa-solid fa-cart-plus"></i> Add to Cart
         </button>
       </div>
